[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-failure-discovery"
version = "0.1.0"
description = "Gymnasium environments for failure discovery."
requires-python = ">=3.11"
dependencies = [
    "gymnasium",
    "numpy",
    "matplotlib",
    "control",
    "tomsutils@git+https://github.com/tomsilver/toms-utils.git",
    "tomsgeoms2d@git+https://github.com/tomsilver/toms-geoms-2d.git",
]

[project.optional-dependencies]
develop = [
    "black",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gym_failure_discovery = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
py_version = 311
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "control.*",
]
ignore_missing_imports = true
